# ScikitGrow

./: .coverage  .coveragerc  .draggable.py.swp  .gitignore  .~lock.Untitled 1.odg#  GUI_libary.py  GUI_libary_and_pipeline.py  GUI_libary_and_pipeline_mother.py  GUI_splash_screen.py  HeaderBar.py  LICENCE  NOTES_LOADING_IMAGES.txt  TODO  TODO.md  TopMenu.py  Untitled 1.odg  block_libary.py  build_linux.sh  clear_saved_app_data.py  colors_and_appearance.py  column_pipeline.py  compile.sh  data.pkl  data_2.pkl  data_test.pkl  dataframe_viewer.py  demo.py  descriptor_statistics_GUI.py  drag_and_drop_utility.py  draggable.py  draggable_holder.py  draggable_parameter.py  draggable_pipeline.py  example_dataset_button.py  example_paper.md  example_python_code.ipynb  gooning.pkl  image_resources.py  index.html  install.sh  (+58 more)
.github/workflows/: python-app.yml
docker_testing/: Dockerfile  Dockerfile-x11  Dockerfile-x11.ssh
examples/: drag_win.py  icons.py
images/: resources.qrc
myenv/: pyvenv.cfg
resources/: random_data.csv  resources.qrc
src/: column_pipeline.py  descriptor_statistics_GUI.py  draggable_parameter.py  draggable_pipeline.py  image_resources.py  main.py  plotter.py  save_file.py  sklearn_libary.py
src/datascratch/: GUI_libary_and_pipeline_mother.py  colors_and_appearance.py  column_pipeline.py  dataframe_viewer.py  descriptor_statistics_GUI.py  drag_and_drop_utility.py  draggable.py  draggable_parameter.py  draggable_pipeline.py  image_resources.py  library_submodules.py  list_of_acceptable_sklearn_functions.py  main.py  plotter.py  predictor_GUI.py  save_file.py  settings_manager.py  sklearn_engine.py  sklearn_libary.py
src/scikitgrow/: descriptor_statistics_GUI.py  gather_datasets.py  image_resources.py  list_of_acceptable_sklearn_functions.py  main.py  predictor_GUI.py
tests/: test_drag_and_drop.py  test_engine.py  test_save_and_load.py
tk_testing/: dnd_test.py  test.py
tkinter/: dataframe_viewer.py  main.py
