[project]
name = "scikit-grow"
version = "0.1.0"
authors = [
  { name="Charles Bennington", email="c.bennington852@gmail.com" },
]
description = "https://github.com/cbennington852/ScikitGrow"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/scikitgrow"]


[project.urls]
Homepage = "https://github.com/cbennington852/ScikitGrow"
Issues = "https://github.com/cbennington852/ScikitGrow/issues"

[project.scripts]
# This maps the command 'my-command' to the 'main' function in 'src/main.py'
run_scikitgrow = "scikitgrow.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
env = [
    "QT_QPA_PLATFORM=offscreen"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

dependencies = [
    "scikit-learn",
    "PyQt5",
    "matplotlib",
    "seaborn",
    "qtwidgets",
    "pyqtdarktheme",
    "aquarel",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "coverage",
    "pytest-cov",
]